2005-10-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #244981
	* gui/print.c: (print_week_day_event): Add the end date
	while printing in the week view.

2005-10-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #316954
	* gui/e-calendar-view.c: (e_calendar_view_edit_appointment): Set
	the USER_ORG flag if the appointment is converted to a meeting.

2005-10-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #301391
	* gui/e-calendar-view.c: (clipboard_get_text_cb):
	Remove the X-EVOLUTION-ENDDATE property, so that
	the copy/paste of recurrence event expands properly in 
	the view.
2005-10-01  P. S. Chakravarthi <pchakravarthi@novell.com>

	Fixes #269685
	* gui/alarm-notify/alarm-queue.c:
	(update_cqa): added.
	(update_qa): added. Invoked by update_cqa ()
	(query_objects_changed_cb): Modified to invoke update_cqa ()
	inorder to update the local alarm structures whenver any
	non time related modifications are made to an existing calendar
	component.

2005-09-30  Veerapuram Varadhan <vvaradhan@novell.com>

	Fixes #303702
	* calendar/conduits/calendar/calendar-conduit.c:
	(process_multi_day): Call e_cal_component_commit_sequence() after
	modifying the properties of an ECalComponent and before fetching
	its icalcomponent.

	Reworked the patch from Dave Malcolm <dmalcolm@redhat.com>
	
2005-09-30  Viren.L  <lviren@novell.com>

	Fixes #258786
	* gui/e-cal-popup.[ch] (e_cal_popup_target_new_select) : Added 
	E_CAL_POPUP_SELECT_NOTCOMPLETE flag.
	* gui/e-cal-menu.[ch] (e_cal_menu_target_new_select) : Added 
	E_CAL_MENU_SELECT_NOTCOMPLETE flag.
	* gui/tasks-control.c (tasks_sensitize_table):
	* gui/e-calendar-table.c (tasks_popup_items): Added the NOT_COMPLETE
	flag.

2005-09-30  Viren.L  <lviren@novell.com>

	Fixes #314599.
	* gui/dialogs/recurrence-page.c (clear_widgets):
	Changed parameter ENDING_FOREVER to ENDING_FOR while invoking 
	e_dialog_option_menu_set, invoked make_ending_count_special ().
	  